--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.mvc.problemdetails.enabled=true
